--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@
     margin: 5px;
     padding: 5px;
     width: 200px;
-    height: 300px;
+    height: 450px;
 }
 
 .res-card:hover{
@@ -38,10 +38,11 @@
     border: 1px solid black;
 }
 
-.search{
-    padding: 10px;
-}
+.filter-btn {
+    margin: 10px;
+    cursor: pointer;
+   }
 
 .res-logo{
-    width: 190px;
+    width: 100%;
 }
